Fixed: Notifications styles: Aligning

--- a/src/styles/themes/proton/sidebar/popup.notifications.styl
+++ b/src/styles/themes/proton/sidebar/popup.notifications.styl
@@ -80,7 +80,7 @@
   position: relative
   display: inline-block
   align-items: flex-start
-  padding: 4px 8px
+  padding: 4px 8px 6px
   opacity: .8
   transition: opacity var(--d-fast)
 .Notifications .notification:hover .header
@@ -90,7 +90,7 @@
   position: absolute
   width: 16px
   height: 16px
-  margin: 2px 5px 2px 0
+  margin: 3px 5px 1px 0
   > img
   > svg
     position: absolute
@@ -111,7 +111,7 @@
   display: inline
   font-size: rem(16)
   font-weight: 600
-  line-height: 20px
+  line-height: 21px
   color: var(--notification-fg)
   word-break: break-word
 .Notifications .notification[data-lvl="err"] .title
